<resources>
    <string name="app_name">School Money</string>

    <!-- Текст для кнопок Start page -->
    <string name="Children">Receipts</string>
    <string name="Expenses">Expenses</string>
    <string name="Result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Child_name">Child name</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="test_value">1987</string>
    <string name="rub">rub</string>
    <string name="Note_hint">For note</string>
    <string name="add_parent">Add parent</string>
    <string name="add_money">Add money</string>
    <string name="Enter_parent_name">Enter parent name</string>
    <string name="Enter_parent_phone">Enter parent phone</string>
    <string name="Enter_child_name">Enter child name</string>
    <string name="Enter_value">Enter value</string>
    <string name="Parents_info">Parents info</string>
    <string name="Money_info">Money info</string>
    <string name="Note">Note</string>
    <string name="Add_child">Add child</string>
    <string name="Value">Value</string>
    <string name="date">date</string>
    <string name="Parent_name">Parent name</string>
    <string name="Add_spend">Add spend</string>
    <string name="Enter_note">Enter note</string>
    <string name="Enter_title">Enter title</string>
    <string name="Delete">Delete</string>
    <string name="SetDate">Set date</string>
    <string name="Back">Back</string>
    <string name="Money_title">Money title</string>
    <string name="total">Total current money:</string>
    <string name="total_receive">Total receive result:</string>
    <string name="Set_target">Set target</string>
    <string name="Settings">Settings</string>
    <string name="Backup_is_successful_to_phone_storage">Backup is successful to phone storage!!!</string>
    <string name="Backup_is_failed">Backup is failed!!!</string>
    <string name="Get_token">Get token</string>
    <string name="Save_to_dropbox">Save to Dropbox</string>
    <string name="Set_token">Set token</string>
    <string name="Save_token">Save token</string>
    <string name="NetworkOnMainThreadException">NetworkOnMainThreadException</string>
    <string name="Download_database">Download database</string>
    <string name="Save_database">Save database</string>
    <string name="File_successfully_added_to_dropbox">File successfully added to dropbox</string>
    <string name="Something_went_wrong_file_does_not_saved">Something went wrong file does not saved</string>
    <string name="Token_was_successfully_updated" >Token was successfully updated!!!</string>
    <string name="Are_you_sure_that_this_child_wants_to_be_removed">Are you sure that this child wants to be removed?</string>
    <string name="Are_you_sure_that_this_parent_wants_to_be_removed">Are you sure that this parent wants to be removed?</string>
    <string name="Are_you_sure_that_this_entry_wants_to_be_removed">Are you sure that this entry wants to be removed?</string>
    <string name="total_spent">Total spent money:</string>


</resources>