<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/floating_window_normal"
    android:orientation="vertical"
    tools:context=".fragments.AddNewSpendMoneyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/enter_value_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <TextView
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enter_title" />

                <EditText
                    android:id="@+id/enter_spend_money_title_edit_text"
                    style="@style/BigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enter_value" />

                <EditText
                    android:id="@+id/enter_spend_money_value_edit_text"
                    style="@style/BigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enter_note" />

                <EditText
                    android:id="@+id/enter_spend_money_note_edit_text"
                    style="@style/BigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/add_money_date"
                        style="@style/textStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:layout_weight="1"
                        android:text="@string/date" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/set_date_button"
                        style="@style/ButtonTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/SetDate" />

                </LinearLayout>


            </LinearLayout>


        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button_on_spend_money_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button_on_spend_money_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Save"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>