<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/floating_window_normal"
    tools:context=".fragments.CreateNewParentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/BigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Enter_parent_name" />

            <EditText
                android:id="@+id/enter_new_parent_name_edit_text"
                style="@style/BigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                style="@style/BigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Enter_parent_phone" />

            <EditText
                android:id="@+id/enter_new_parent_phone_edit_text"
                style="@style/BigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="phone" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button_on_create_parents_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button_on_create_parents_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Save"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>