<?xml version="1.0" encoding="utf-8"?>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.ChildCardFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/child_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:id="@+id/child_name_on_child_card_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textSize="34sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Child_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="72dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:paddingStart="8dp"
            style="@style/PlainTextStyle"
            android:text="@string/Note"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/recyclerStyle">


        <androidx.appcompat.widget.AppCompatEditText
            style="@style/recyclerStyle"
            android:id="@+id/note_text_view"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:focusable="true"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="7"
            android:background="@drawable/note_background"/>

        </LinearLayout>


<!-- Parents -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:paddingStart="8dp"
            style="@style/PlainTextStyle"
            android:text="@string/Parents_info"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:tag="my_fragment_tag"
            android:maxHeight="200dp"
            style="@style/recyclerStyle"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/parent_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ReceiptsPageFragment"
                >

            </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_new_parent_fab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_input_add"
                app:tint="@null"
                app:backgroundTint="@null"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:layout_marginTop="66dp"
                android:layout_gravity="top|end"
                android:layout_marginEnd="16dp"
                android:text="@string/add_parent"/>

        </FrameLayout>









        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:paddingStart="8dp"
            style="@style/PlainTextStyle"
            android:text="@string/Money_info"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:id="@+id/fragment_children_list"
            android:tag="my_fragment_tag"
            style="@style/recyclerStyle"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/child_money_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ReceiptsPageFragment"
                >
            </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_new_child_money_fab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_input_add"
                app:tint="@null"
                app:backgroundTint="@null"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="66dp"
                android:layout_gravity="top|end"
                android:text="@string/add_money"/>

        </FrameLayout>



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button_on_child_card_fragment"
            android:text="@string/Cancel"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:background="@drawable/recycler_item_blue"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button_on_child_card_fragment"
            android:text="@string/Save"
            android:background="@drawable/recycler_item_blue"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_weight="1"/>

    </LinearLayout>

    </FrameLayout>


