<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete_dialog_confirmation_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/floating_window_normal"
        style="@style/FloatingWindowTheme"
        >










        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/BigText"
            android:text="@string/Are_you_sure_that_this_child_wants_to_be_removed"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chancel_child_floating_window_button"
                android:layout_height="60dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/recycler_item_blue"
                android:layout_margin="4dp"
                android:text="@string/Cancel" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_child_floating_window_button"
                android:layout_height="60dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/red_button"
                android:layout_margin="4dp"
                android:text="@string/Delete" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>