<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/floating_window_normal"
    android:orientation="vertical"
    tools:context=".fragments.AddMoneyFormChildrenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/enter_value_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enter_value" />

                <EditText
                    android:id="@+id/enter_money_from_child_edit_text"
                    style="@style/BigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="64dp"
                    android:gravity="center" />
            </LinearLayout>


        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button_on_add_money_from_child_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button_on_add_money_from_child_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/recycler_item_blue"
            android:text="@string/Save"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>